tests/error/non_default_constructible_variable.bz
// error: variable type '*i32' is not default constructible and must be initialized
function test()
{
	mut _: *i32;
}
